--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,25 +29,25 @@ jobs:
           flutter-version: ${{ matrix.flutter-version }}
           cache: true
 
-      - name: 🤖 AVD Cache
-        uses: actions/cache@v4
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-29
+      # - name: 🤖 AVD Cache
+      #   uses: actions/cache@v4
+      #   id: avd-cache
+      #   with:
+      #     path: |
+      #       ~/.android/avd/*
+      #       ~/.android/adb*
+      #     key: avd-29
 
-      - name: 🤖 Cache AVD Snapshot
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          arch: x86_64
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD Snapshot"
+      # - name: 🤖 Cache AVD Snapshot
+      #   if: steps.avd-cache.outputs.cache-hit != 'true'
+      #   uses: reactivecircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 29
+      #     arch: x86_64
+      #     force-avd-creation: false
+      #     emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+      #     disable-animations: false
+      #     script: echo "Generated AVD Snapshot"
 
       - name: 🧪 Run Patch E2E Tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -61,7 +61,10 @@ jobs:
 
             # Create a new empty flutter project
             flutter create e2e_test --empty --platforms android
-            cd ./e2e_test
+
+            ls -la
+
+            cd e2e_test
 
             ls -la
 
