chore: debug script

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,36 +49,66 @@ jobs:
       #     disable-animations: false
       #     script: echo "Generated AVD Snapshot"
 
-      - name: 🧪 Run Patch E2E Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          arch: x86_64
-          script: |
-            # Create a temporary directory            
-            TEMP_DIR=$(mktemp -d -t 'workspace-XXXXX')
-            cd "$TEMP_DIR"
+      # - name: 🧪 Run Patch E2E Tests
+      #   uses: reactivecircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 29
+      #     arch: x86_64
+      #     script: |
+      #       # Create a temporary directory
+      #       TEMP_DIR=$(mktemp -d -t 'workspace-XXXXX')
+      #       cd "$TEMP_DIR"
 
-            # Create a new empty flutter project
-            flutter create e2e_test --empty --platforms android
+      #       # Create a new empty flutter project
+      #       flutter create e2e_test --empty --platforms android
 
-            ls -la
+      #       ls -la
 
-            cd e2e_test
+      #       cd e2e_test
 
-            ls -la
+      #       ls -la
 
-            # Replace the contents of "lib/main.dart" with a single print statement.
-            echo "void main() { print('hello world'); }" > lib/main.dart
+      #       # Replace the contents of "lib/main.dart" with a single print statement.
+      #       echo "void main() { print('hello world'); }" > lib/main.dart
 
-            # Create a new release on Android
-            flutter build appbundle --release
+      #       # Create a new release on Android
+      #       flutter build appbundle --release
 
-            # Download bundletool 1.17.1
-            curl -L -o bundletool.jar https://github.com/google/bundletool/releases/download/1.17.1/bundletool-all-1.17.1.jar
+      #       # Download bundletool 1.17.1
+      #       curl -L -o bundletool.jar https://github.com/google/bundletool/releases/download/1.17.1/bundletool-all-1.17.1.jar
 
-            # Build a universal APK
-            java -jar bundletool.jar build-apks --overwrite --bundle=build/app/outputs/bundle/release/app-release.aab --output=outputs/my_app.apks --mode=universal
+      #       # Build a universal APK
+      #       java -jar bundletool.jar build-apks --overwrite --bundle=build/app/outputs/bundle/release/app-release.aab --output=outputs/my_app.apks --mode=universal
 
-            # Install the APK on a device
-            java -jar bundletool.jar install-apks --allow-downgrade --apks=outputs/my_app.apks
+      #       # Install the APK on a device
+      #       java -jar bundletool.jar install-apks --allow-downgrade --apks=outputs/my_app.apks
+
+      - name: Run Script
+        run: |
+          # Create a temporary directory            
+          TEMP_DIR=$(mktemp -d -t 'workspace-XXXXX')
+          cd "$TEMP_DIR"
+
+          # Create a new empty flutter project
+          flutter create e2e_test --empty --platforms android
+
+          ls -la
+
+          cd e2e_test
+
+          ls -la
+
+          # Replace the contents of "lib/main.dart" with a single print statement.
+          echo "void main() { print('hello world'); }" > lib/main.dart
+
+          # Create a new release on Android
+          flutter build appbundle --release
+
+          # Download bundletool 1.17.1
+          curl -L -o bundletool.jar https://github.com/google/bundletool/releases/download/1.17.1/bundletool-all-1.17.1.jar
+
+          # Build a universal APK
+          java -jar bundletool.jar build-apks --overwrite --bundle=build/app/outputs/bundle/release/app-release.aab --output=outputs/my_app.apks --mode=universal
+
+          # Install the APK on a device
+          java -jar bundletool.jar install-apks --allow-downgrade --apks=outputs/my_app.apks
